Fix .tabs__section__nav on mobile

--- a/src/css/blocks/_tabs.css
+++ b/src/css/blocks/_tabs.css
@@ -117,14 +117,16 @@
     @extend %no-list;
     background: var(--light-gray);
     padding:  0;
-    justify-content: flex-end;
+    justify-content: center;
+    @media (--tablet) { justify-content: flex-end; }
 
     &__item > a {
       text-decoration: none;
       /*text-transform: uppercase;*/
       font-size: 1.4rem;
       color: var(--slate-gray);
-      padding: .75rem 2rem;
+      padding: .75rem .5rem;
+      @media (--tablet) { padding: .75rem 2rem; }
       display: block;
 
       &:hover {
